--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-image: url('assets\pic.jpg'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
     <div class="container">
         <h1>Weather App</h1>
         <div class="search-container">
